--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Card Game</h1>
     <div id="game">
-        
+        <div id="player-hand" class="hand"></div>
+        <div id="discard-pile" class="pile"></div>
+        <button id="draw-card-button">Draw 3 Cards</button>
     </div>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
